Changes to support new engine functionality, and beginning of PoC for a full fledged game